crates/compiler/tests/parse_errors/tuple_type_unfinished.elm
module Main exposing (..)
x : (Int,
x = ( 1, 2 )
